--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -3,7 +3,7 @@ phases:
 
 - phase: 'TestInUbuntu'
   queue:
-    name: 'Hosted Linux'
+    name: 'Hosted Linux Preview'
     parallel: 1
     matrix:
       # Python27:
