--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -79,6 +79,7 @@ phases:
 
     - script: |
         if [ -n "$MINICONDA_PATH" ]; then
+          export PATH=$MINICONDA_PATH/bin:$PATH
           source activate testenv
         fi
 
