remove minimatch from coverage upload

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -58,5 +58,5 @@ phases:
     - task: PublishCodeCoverageResults@1
       displayName: 'Publish code coverage results'
       inputs:
-        summaryFileLocation: '**/.coverage'
+        summaryFileLocation: '.coverage'
 
