--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -115,12 +115,14 @@ phases:
     
     - script: pip install --timeout=60 -r build_tools/vsts/requirements.txt"
       displayName: 'Install requirements'
+
+    - powershell: |
+        Invoke-WebRequest -Uri "https://download.microsoft.com/download/7/9/6/796EF2E4-801B-4FC4-AB28-B59FBF6D907B/VCForPython27.msi" -OutFile "VCForPython27.msi"
+        msiexec VCForPython27.msi /qn
+      displayName: 'Python 2.7-specific tools'
     
     - script: |
         python setup.py bdist_wheel bdist_wininst -b doc/logos/scikit-learn-logo.bmp
-        echo -----
-        dir
-        echo -----
         pip install --pre --no-index --find-links dist/ scikit-learn
       displayName: 'Create and install dist'
     
